src/test/deca/context/invalid/op_bool_string.deca
//ERROR :5:
{
String a="r";
String b="klf";
String c=a &&b;

}